feat: replace make by cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,5 @@ include_directories(${PROJECT_SOURCE_DIR}/extlib/ut/include)
 execute_process(COMMAND git submodule update --init --recursive
                 WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
 
+add_subdirectory(src)
 add_subdirectory(tests)
